# esudoku

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  configure.in
m4/: ac_path_generic.m4
src/: Makefile.am  core.c  core.h  esudoku.glade  esudoku.h  gui_etk.c  gui_etk.h  macros.h  main.c  rules.c  rules.h  util.c  util.h
src/osx/: Info.plist  eSudoku.icns  eSudoku_Prefix.pch  gui-osx.c
src/osx/English.lproj/: InfoPlist.strings
src/osx/English.lproj/main.nib/: info.nib  objects.xib
src/osx/English.lproj/main~.nib/: info.nib  objects.xib
src/osx/eSudoku.xcodeproj/: project.pbxproj
